Minor code fixes and addition of notes.